# wafer-to-watt

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py  wtw.py
.github/workflows/: ci.yml
data/raw/edgar/: 2026q2_8k_fixture.html
data/snapshots/: 2026q2.jsonl
decisions/: DEC-WTW-001-commitments-schema.md
docs/: first-pr.md
reports/: 2026q2-allocations.md
schemas/: commitment.schema.json
scripts/: validate_schemas.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/wtw/: __init__.py  cli.py  models.py  parser.py  report.py  validation.py
tests/: test_wtw.py
